<resources>
    <string name="app_name">OLYV ADMIN</string>
    <string name="enter_phone_number_below">Enter Phone number below.</string>
    <string name="term_and_conditions">term and conditions</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="phone_number">Phone number</string>
    <string name="by_signing_up_you_confirm_that_you_agree_to_our_terms_of_use_and_have_read_and_understand_our_privacy_policy_you_will_receive_an_sms_to_confirm_your_phone_number_sms_fee_may_apply">By signing up, you confirm that you agree to our Terms of Use and have read and understand our Privacy Policy. You will receive an SMS to confirm your phone number. SMS fee may apply</string>
    <string name="invalid_otp">Invalid OPT</string>
    <string name="check_internet">check internet connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="please_wait">Please wait</string>
    <string name="add">Add</string>
    <string name="users">USERS</string>
    <string name="add_user">Add User</string>
</resources>