<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:theme="@style/et_style"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/by_signing_up_you_confirm_that_you_agree_to_our_terms_of_use_and_have_read_and_understand_our_privacy_policy_you_will_receive_an_sms_to_confirm_your_phone_number_sms_fee_may_apply"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/et_number"
        app:layout_constraintStart_toStartOf="@+id/et_number"
        app:layout_constraintTop_toBottomOf="@+id/et_number" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:tint="@color/white"
        app:backgroundTint="?colorPrimary"
        android:src="@drawable/ic_round_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/enter_phone_number_below"
        android:gravity="center"
        style="@style/text_20_lite"
        app:layout_constraintEnd_toEndOf="@+id/et_number"
        app:layout_constraintStart_toStartOf="@+id/et_number"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/term_and_conditions"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/tv_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/privacy_policy"
        android:textColor="?colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

</androidx.constraintlayout.widget.ConstraintLayout>